--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
 
   <h1>bumpchart </h1>
-  <object data="./bumpchart.svg" type="image/svg+xml">
+  <object data="./grafo1.svg" type="image/svg+xml">
     Tu navegador no soporta SVG.
   </object>
     
   <object data="" alt="">
     
   <h1>streamgraph</h1>
-  <object data="./streamgraph.svg" type="image/svg+xml">
+  <object data="./grafo2.svg" type="image/svg+xml">
     Tu navegador no soporta SVG.
   </object>
 
