--- a/Flowrish/Index.html
+++ b/Flowrish/Index.html
@@ -34,4 +34,60 @@
         /* --- TÍTULOS --- */
         h1 {
             font-size: 2.4rem;
-            margin-bo
+            margin-bottom: 10px;
+            font-weight: 700;
+            color: #1d3557;
+        }
+
+        .subtitle {
+            font-size: 1.15rem;
+            color: #3d4f65;
+            margin-bottom: 35px;
+            font-weight: 400;
+        }
+
+        h2 {
+            font-size: 1.6rem;
+            margin-top: 50px;
+            margin-bottom: 20px;
+            color: #1d3557;
+            font-weight: 600;
+            border-left: 5px solid #457b9d;
+            padding-left: 12px;
+        }
+
+        /* --- VISUALIZACIONES --- */
+        .viz-content {
+            margin-top: 25px;
+            margin-bottom: 25px;
+            background: rgba(255,255,255,0.65);
+            border-radius: 14px;
+            overflow: hidden;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+            border: 1px solid rgba(255,255,255,0.7);
+        }
+
+        .flourish-embed {
+            margin: 0;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="gallery">
+        <h1>📊 Proyectos con Flourish: Los Simpson</h1>
+        <p class="subtitle">Análisis visual mediante un diagrama Sankey creado con Flourish.</p>
+
+        <h2>Diagrama de Sankey: Los Simpson</h2>
+
+        <div class="viz-content">
+            <div class="flourish-embed flourish-sankey" data-src="visualisation/26616800">
+                <script src="https://public.flourish.studio/resources/embed.js"></script>
+                <noscript>
+                    <img src="https://public.flourish.studio/visualisation/26616800/thumbnail" width="100%" alt="Sankey Diagram Los Simpson" />
+                </noscript>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
