--- a/DatosPersonales/Index.html
+++ b/DatosPersonales/Index.html
@@ -55,12 +55,12 @@
 
     <!-- KPI 2 -->
     <div class="card">
-        <div class="kpi-title">KPI 2 — Duración total de viajes por día (min)</div>
+        <div class="kpi-title">KPI 2 — Uso del auto por dia (min)</div>
         <div class="kpi-desc">
-            Suma todos los minutos manejados por día. Útil para ver qué días tienen mayor intensidad de tráfico.
+            Suma todos los minutos manejados por día. Útil para ver qué días uso mas el auto.
         </div>
 
-        <!-- Pegar aquí el iframe de Flourish -->
+        <div class='tableauPlaceholder' id='viz1764978656415' style='position: relative'><noscript><a href='#'><img alt='Tiempo arriba del auto (min) ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;TP&#47;TPdatospersonales_17649782338120&#47;Hoja2&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='TPdatospersonales_17649782338120&#47;Hoja2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;TP&#47;TPdatospersonales_17649782338120&#47;Hoja2&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='es-ES' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1764978656415');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     </div>
 
     <!-- KPI 3 -->
