--- a/DatosPersonales/Index.html
+++ b/DatosPersonales/Index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 
-    <h1>Dashboard de Viajes · Datos Waze</h1>
+    <h1>Dashboard de Viajes | Datos Waze 🚗</h1>
 
     <!-- KPI 1 -->
     <div class="card">
@@ -50,8 +50,7 @@
             Mide la velocidad promedio según la distancia recorrida y el tiempo utilizado en cada viaje.
             Permite identificar días con tránsito más fluido o más lento.
         </div>
-<div class="flourish-embed flourish-chart" data-src="visualisation/26618489"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/26618489/thumbnail" width="100%" alt="chart visualization" /></noscript></div>
-    </div>
+<div class="flourish-embed flourish-chart" data-src="visualisation/26618489"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/26618489/thumbnail" width="100%" alt="chart visualization" /></noscript></div>    </div>
 
     <!-- KPI 2 -->
     <div class="card">
