--- a/DatosPersonales/Index.html
+++ b/DatosPersonales/Index.html
@@ -132,7 +132,7 @@
         <div class="card">
             <div class="kpi-title">Uso del auto por dia (min)</div>
             <div class="kpi-desc">
-                Suma todos los minutos manejados por día. Útil para ver qué días uso más el auto.
+                Promedio del tiempo por dia de la semana. Útil para ver qué días uso más el auto.
             </div>
 
             <div class='tableauPlaceholder' id='viz1764978656415' style='position: relative'>
